--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,8 @@
 [bdist_wheel]
 universal=1
+
+[tool:pytest]
+addopts = --cov=popcon --cov-branch --cov-report=term-missing
+
+[flake8]
+exclude = venv,build
