nicer test config

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,11 @@
 universal=1
 
 [tool:pytest]
-addopts = --cov=popcon --cov-branch --cov-report=term-missing
+addopts =
+    --cov=popcon
+    --cov=tests
+    --cov-report=term-missing:skip-covered
+    --cov-report=html
 
 [flake8]
 exclude = venv,build
