Set debhelper-compat version in Build-Depends.
Changes-By: lintian-brush
Fixes: lintian: uses-debhelper-compat-file
See-also: https://lintian.debian.org/tags/uses-debhelper-compat-file.html

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: python-popcon
 Priority: optional
 Maintainer: Bastian Venthur <venthur@debian.org>
-Build-Depends: debhelper (>= 12~), dh-python, python3, python3-setuptools
+Build-Depends: debhelper-compat (= 12), dh-python, python3, python3-setuptools
 Standards-Version: 4.1.1
 Section: python
 Vcs-Git: https://github.com/venthur/python-popcon
